--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+recipes:
+    path:      /recipes/{id}
+    defaults:    { _controler: AppBundle:Recipe:show}
+    
